# routes/user.js
@@ -1,11 +1,12 @@
 const router = require('express').Router();
 
 const userController = require('../controllers/user');
+const { isAutehnticated } = require('../middleware/authenticate.js');
 
 router.get('/', userController.getAll);
 router.get('/:id', userController.getSingle);
-router.post('/', userController.addUser);
-router.put('/:id', userController.updateUser);
-router.delete('/:id', userController.deleteUser);
+router.post('/', isAutehnticated, userController.addUser);
+router.put('/:id', isAutehnticated, userController.updateUser);
+router.delete('/:id', isAutehnticated, userController.deleteUser);
 
 module.exports = router;
